2005-05-21  David Schleef  <ds@schleef.org>

	* libswfdec/Makefile.am:
	* libswfdec/swf.c:
	* libswfdec/swfdec_audio.c:
	* libswfdec/swfdec_audio.h:
	* libswfdec/swfdec_buffer.c:
	* libswfdec/swfdec_buffer.h:
	* libswfdec/swfdec_decoder.h:
	* libswfdec/swfdec_internal.h:
	* libswfdec/swfdec_render.c:
	* libswfdec/swfdec_sound.c:
	  Mostly implement an audio mixing subsystem.

2005-05-12  David Schleef  <ds@schleef.org>

	* plugin/swfdec-mozilla-player.c: (create_pipeline): Add a
	colorspace to the pipeline, since a negotiation failure will
	occur unless the XImage format is exactly the same as swfdec's
	colorspace.

2005-05-08  David Schleef  <ds@schleef.org>

	Fixes for -wsigned-compare, default in gcc-4.0:
	* configure.ac: reenable -Werror
	* libswfdec/actions.c: (stack_pop), (stack_show),
	(stack_show_value):
	* libswfdec/jpeg/jpeg.c: (jpeg_decoder_decode_entropy_segment):
	* libswfdec/js/Makefile.am:
	* libswfdec/js/jsdtoa.c: (ulp), (b2d), (JS_strtod):
	* libswfdec/js/jsinterp.c: (js_Interpret):
	* libswfdec/js/jsstr.c: (str_split):
	* libswfdec/swfdec_actions.h:
	* libswfdec/swfdec_bits.c: (swfdec_bits_get_string):
	* libswfdec/swfdec_decoder.h:

2005-05-08  David Schleef  <ds@schleef.org>

	* configure.ac: oops, checked in a mistake.
	* libswfdec/actions_tags.c: (action_define_function_2): fix warning
	* libswfdec/swfdec_render_cairo.c: (swfdec_render_be_start),
	(swfdec_render_be_clear), (swfdec_shape_render),
	(swfdec_text_render): Update to new cairo API.
	* libswfdec/jpeg/huffman.c: (huffman_table_decode_macroblock):
	remove random printf
	* plugin/Makefile.am: Disable plugin building if gstreamer isn't
	around.

	Fixes for -wsigned-compare, default in gcc-4.0:
	* libswfdec/swfdec_decoder.h: fix endianness
	* pixbuf-loader/io-swf.c: (fill_info):
	* player/swf_play.c: (main):
	* plugin/gstappsrc.c: (gst_appsrc_loop):
	* plugin/swfdec-mozilla-player.c: (found_tags):
	* test/dump.c: (main):

2005-05-06  Eric Anholt  <anholt@FreeBSD.org>
